# daskscratch

./: pyproject.toml
data/: systems_20250729.csv
notebooks/: ETL_dask.ipynb  ML_dask.ipynb  dask_arrays.ipynb  dask_jupyterlab.ipynb  dask_simple.ipynb  lazy_evaluation.ipynb  loading_data_dask.ipynb  partitioning_dask.ipynb  setting_up_clusters.ipynb  streams.ipynb
notebooks/.ipynb_checkpoints/: dask_simple-checkpoint.ipynb
src/daskscratch/: futures.py  lazy_eval.py  scheduling_local.py  scheduling_remote.py
