[tool.poetry]
name = "daskscratch"
version = "0.1.0"
description = ""
authors = ["nicolas <nsocri@ibmb.csic.es>"]
readme = "README.md"
packages = [{include = "daskscratch", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
dask = {extras = ["distributed"], version = "^2025.10.0"}
jupyterlab = "^4.4.10"
numpy = "^2.3.4"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
mimesis = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
