[tool.poetry]
name = "daskscratch"
version = "0.1.0"
description = ""
authors = ["nicolas <nsocri@ibmb.csic.es>"]
readme = "README.md"
packages = [{include = "daskscratch", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
dask = {extras = ["distributed"], version = "^2025.10.0"}
jupyterlab = "^4.4.10"
numpy = "^2.3.4"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
mimesis = "^18.0.0"
graphviz = "^0.21"
bokeh = "^3.8.1"
h5py = "^3.15.1"
dask-ml = "^2025.1.0"
streamz = "^0.6.4"
networkx = "^3.5"
nodejs = "^0.1.1"
dask-labextension = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
